2001-08-16  Peter Stephenson  <pws@csr.com>

	* 15647: Functions/Misc/zcalc:  with output not showing the
	base (e.g. [##16]) reuse of previous values didn't work.

2001-08-16  Sven Wischnowsky  <wischnow@zsh.org>

	* 15639: Src/text.c: fix bug for output of unquoted here-docs and
	-strings with special characters

	* 15638: Completion/Base/Completer/_approximate: make sure that
	there is one of the group-options before using it

2001-08-15  Geoff Wing  <gcw@zsh.org>
	
	* 15621: Src/Zle/zle_refresh.c: display of status line was being
	mucked up; also fix continuation markers "<...." and "<....>"

	* unposted: Src/Zle/zle_refresh.c: fix possible seg fault on a
	screen height shrink

2001-08-15  Adam Spiers  <adam@spiers.net>

	* unposted: Doc/Zsh/expn.yo: mention the word `greedy' in the
	docs for the S flag, to make it easier to find for those used to
	Perl-speak.

	* unposted: Doc/Zsh/compsys.yo: add missing docs for cache-policy
	style.

	* 15630: Completion/Redhat/Command/_rpm: update caching policy
	for newer versions of rpm.

2001-08-14  Clint Adams  <clint@zsh.org>

	* 15629: Completion/Unix/Command/_zip: unzip -Z
	should behave the same as zipinfo.

2001-08-13  Bart Schaefer  <schaefer@brasslantern.com>

	* 15613 (plus unposted additions): Test/B02typeset.ztst: Tests for
	correct behavior of typeset options and arguments.

	* 15611: Src/builtin.c, Test/D06subscript.ztst: Fix crash bug when
	assigning to array elements in a function in the arguments of
	typeset or local.  Change test for new typeset restrictions.

2001-08-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 15615: Completion/Unix/Type/_path_files: -[12n] options don't
	get arguments

2001-08-12  Bart Schaefer  <schaefer@zsh.org>

	* Peter Breitenlohner: 14956: Makefile.in, Doc/Makefile.in,
	Test/Makefile.in: Fix various interactions of DESTDIR and use of
	multiple build targets, e.g. "make DESTDIR=/tmp all check info".

2001-08-09  Oliver Kiddle  <opk@zsh.org>
